crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__bare-url-encoding.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Link \url{http://example.com/a\%5Bb\%5Dc\%7Cd} here.
