crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__bare-url-trailing-punctuation.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
See \url{http://example.com/path}. Also (http://example.org/a) end.
