crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__block-html-tags.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{quote}
Quoted text.
\end{quote}
