crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__blockquote.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{quote}
A quoted paragraph with \emph{emphasis}.
\end{quote}
