crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__bullet-lists.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{itemize}
\tightlist
\item
  one
\item
  two

  \begin{itemize}
  \tightlist
  \item
    two a
  \item
    two b
  \end{itemize}
\item
  three
\end{itemize}
