crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__definition-consecutive-terms.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{description}
\tightlist
\item[first\\
second]
shared definition
\end{description}
