crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__definition-lists.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{description}
\tightlist
\item[Term]
Definition
\item[Apple]
A fruit
\end{description}
