crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__definition-multi.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{description}
\tightlist
\item[Fruit]
Apple

Banana
\item[Vegetable]
Carrot
\end{description}
