crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__definition-term-url.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{description}
\tightlist
\item[\url{http://example.com}]
a definition
\end{description}
